# ishi

./: Cargo.toml  Justfile  README.md  run-tasks.sh
.github/workflows/: ci.yml  release.yml
src/: app.rs  config.rs  keys.rs  main.rs  suspend.rs
src/amp/: mod.rs  output.rs  reconcile.rs  run.rs  session.rs  session_manager.rs  state.rs  thread.rs
src/api/: anthropic.rs  cache.rs  client.rs  fake.rs  mod.rs  types.rs
src/views/: create_issue.rs  detail.rs  help.rs  mod.rs  my_issues.rs  project.rs  project_list.rs  quick_create.rs
tests/fixtures/: issue_detail.json  my_issues.json  project_issues.json  projects.json
