[package]
name = "ishi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
crossterm = "0.28"
dirs = "6"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
